package com.company;

public interface Visited {
  void acceptVisitor(Visitor visitor);
}
